--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>strategy-pattern</module>
         <module>proxy-pattern</module>
+        <module>singleton-pattern</module>
     </modules>
 
     <dependencies>
