--- a/abstract-factory-pattern/pom.xml
+++ b/abstract-factory-pattern/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.studyinghome</groupId>
-    <artifactId>design-patterns</artifactId>
+    <artifactId>abstract-factory-pattern</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>design-patterns</name>
+    <name>abstract-factory-pattern</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -23,15 +23,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-
-    <modules>
-        <module>strategy-pattern</module>
-        <module>proxy-pattern</module>
-        <module>singleton-pattern</module>
-        <module>multition-pattern</module>
-        <module>factory-method-pattern</module>
-        <module>abstract-factory-pattern</module>
-    </modules>
 
     <dependencies>
         <dependency>
@@ -48,11 +39,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>23.0</version>
         </dependency>
     </dependencies>
 
